re-add the footer main text

--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -77,6 +77,7 @@
             </ul>
           </div>
           <div class="footer-main-text">
+          The Open Source Policy Center is dedicated to encouraging good policy by making policy analysis more transparent, accessible, and collaborative.
           </div>
         </div>
       </div>
