--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="col-sm-9">
         <div class="news-detail-header">
-          <h1>Maecenas faucibus mollis interdum lipsum Aenean lacinia bibendum nulla sedium est consectetur nullam</h1>
+          <h1>{{ article.title }}</h1>
         </div>
       </div>
     </div>
@@ -22,6 +22,7 @@
 
           <p class="intro">Donec sed odio dui. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cras mattis consectetur purus sit amet fermentum. Nullam quis risus eget urna.</p>
 
+          {{ article.content }}
           <p>Maecenas faucibus mollis interdum. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum link dolor sit amet, consectetur adipiscing elit. Nulla vitae elit libero, a pharetra augue.</p>
 
           <p>Donec sed odio dui. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cras mattis consectetur purus sit amet fermentum. Nullam quis risus eget urna mollis ornare vel eu leo. Donec id elit non mi porta gravida at eget metus.</p>
