update links in template.

--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -40,16 +40,16 @@
         <div class="collapse navbar-collapse" id="main-nav">
           <ul class="nav navbar-nav navbar-right">
             <li class="">
-              <a href="/">Home</a>
+              <a href="http://www.ospc.org/">Home</a>
             </li>
             <li class="">
-              <a href="/taxbrain">Apps</a>
+              <a href="http://www.ospc.org/taxbrain">Apps</a>
             </li>
             <li class="">
-              <a href="/about">About</a>
+              <a href="http://www.ospc.org/about">About</a>
             </li>
             <li class="current">
-              <a href="/news">News</a>
+              <a href="http://news.ospc.org/">News</a>
             </li>
           </ul>
         </div>
