Change to a 1-column layout.

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -12,7 +12,7 @@
         <div class="container">
           <div class="row">
           {% for article in articles %}
-            <div class="col-sm-6">
+            <div class="col-12">
               <div class="news-item tagged">
                 <h4><a href="{{ article.url }}">{{ article.title }}</a></h4>
                 <p>{{ article.summary }}</p>
