Remove the latin filler text around articles and darken the font to account for the lost text.

--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -20,47 +20,12 @@
       <div class="col-sm-9">
         <div class="news-detail">
 
-          <p class="intro">Donec sed odio dui. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cras mattis consectetur purus sit amet fermentum. Nullam quis risus eget urna.</p>
-
           {{ article.content }}
-          <p>Maecenas faucibus mollis interdum. Aenean lacinia bibendum nulla sed consectetur. Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum link dolor sit amet, consectetur adipiscing elit. Nulla vitae elit libero, a pharetra augue.</p>
-
-          <p>Donec sed odio dui. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cras mattis consectetur purus sit amet fermentum. Nullam quis risus eget urna mollis ornare vel eu leo. Donec id elit non mi porta gravida at eget metus.</p>
-
-          <h2>Quantitas motus est mensura ejusdem</h2>
-
-          <p>Curabitur blandit tempus porttitor. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec sed odio dui. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
-
-          <div>
-            <p>Curabitur blandit tempus porttitor. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec sed odio dui. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
-          </div>
-
-          <div class="figure">
-            <img src="{{ SITEURL }}/images/fpo-news-image.jpg" alt="" class="img-responsive">
-            <div class="caption">
-              Caption at eget metus. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
-            </div>
-          </div>
-
-          <h2>Vis impressa est actio in corpus exercita</h2>
-
-          <ol class="ordered-list">
-            <li>Curabitur blandit tempus porttitor.</li>
-            <li>Ipsum dolor sit amet, consectetur adipiscing elit.</li>
-            <li>Nullam quis risus eget urna mollis ornare vel eu leo.</li>
-          </ol>
-
-          <h2>Vis centripeta est qua corpus</h2>
-
-          <ul class="unordered-list">
-            <li>Curabitur blandit tempus porttitor. Donec ullamcorper nulla non metus auctor.</li>
-            <li>Ipsum dolor sit amet, consectetur adipiscing elit.</li>
-            <li>Nullam quis risus eget urna mollis ornare vel eu leo. Vestibulum id ligula porta felis euismod semper. Nullam quis risus eget urna mollis ornare vel eu leo.</li>
-          </ul>
 
         </div>
       </div>
 
+      {#
       <div class="col-sm-3">
         <div class="news-detail-sidebar">
           <h2>Spread the Word</h2>
@@ -69,36 +34,33 @@
             <li class="contact-facebook"><a href="#">Share on Facebook</a></li>
             <li class="contact-linkedin"><a href="#">Discuss on LinkedIn</a></li>
           </ul>
-          <h2>Resources</h2>
-          <p>Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam id dolor id nibh ultricies vehicula ut id.</p>
-          <p>Vestibulum id ligula porta felis euismod semper. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
-          <p><a href="#">Lipsum dolorsit amet</a></p>
         </div>
       </div>
+      #}
     </div>
 
     <div class="news-detail-break"></div>
   </div>
 
+  {#
   <section class="news-items">
     <div class="container">
       <p class="text-right"><a href="#" class="see-all">See all news</a></p>
       <div class="row">
         <div class="col-sm-6">
           <div class="news-item tagged">
-            <h4><a href="#">Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</a></h4>
-            <p>Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>
+            <h4><a href="#">Next news item.</p>
           </div>
         </div>
         <div class="col-sm-6">
           <div class="news-item">
-            <h4><a href="#">Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</a></h4>
-            <p>Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>
+            <h4><a href="#">Other news item after that.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
+  #}
 
   <div class="push"></div>
 
