retitle the blog page

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -5,7 +5,7 @@
     <div class="container">
 
       <div class="page-header">
-        <h1 class="text-center">En tibi norma Poli, & divæ libramina Molis</h1>
+        <h1 class="text-center">News and Announcements about OSPC</h1>
       </div>
 
       <section class="news-items news-items-trans">
