add author name to index and show, link fix

--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -5,13 +5,14 @@
   <div class="container">
 
     <p>
-      <a href="news.html" class="back-to">See all news</a>
+      <a href="/" class="back-to">See all news</a>
     </p>
 
     <div class="row">
       <div class="col-sm-9">
         <div class="news-detail-header">
           <h1>{{ article.title }}</h1>
+          <h4>By {{ article.author }}</h4>
         </div>
       </div>
     </div>
