--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -15,6 +15,7 @@
             <div class="col-12">
               <div class="news-item tagged">
                 <h4><a href="{{ article.url }}">{{ article.title }}</a></h4>
+                <h5>By {{ article.author }}</h5>
                 <p>{{ article.summary }}</p>
               </div>
             </div>
