Fix Apps, About, News links on news.ospc.org

--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -71,9 +71,9 @@
           <div class="footer-main-links">
             <ul>
               <li><a href="/">Home</a></li>
-              <li><a href="/taxbrain">Apps</a></li>
-              <li><a href="/about">About</a></li>
-              <li><a href="/news">News</a></li>
+              <li><a href="http://www.ospc.org/taxbrain">Apps</a></li>
+              <li><a href="http://www.ospc.org/about">About</a></li>
+              <li><a href="http://news.ospc.org/">News</a></li>
             </ul>
           </div>
           <div class="footer-main-text">
