News link directs to same page

--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -49,7 +49,7 @@
               <a href="http://www.ospc.org/about">About</a>
             </li>
             <li class="current">
-              <a href="http://news.ospc.org/">News</a>
+              <a href="/">News</a>
             </li>
           </ul>
         </div>
