--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -40,13 +40,13 @@
         <div class="collapse navbar-collapse" id="main-nav">
           <ul class="nav navbar-nav navbar-right">
             <li class="">
-              <a href="http://www.ospc.org/">Home</a>
+              <a href="//www.ospc.org/">Home</a>
             </li>
             <li class="">
-              <a href="http://www.ospc.org/taxbrain">Apps</a>
+              <a href="//www.ospc.org/taxbrain">Apps</a>
             </li>
             <li class="">
-              <a href="http://www.ospc.org/about">About</a>
+              <a href="//www.ospc.org/about">About</a>
             </li>
             <li class="current">
               <a href="/">News</a>
@@ -71,9 +71,9 @@
           <div class="footer-main-links">
             <ul>
               <li><a href="/">Home</a></li>
-              <li><a href="http://www.ospc.org/taxbrain">Apps</a></li>
-              <li><a href="http://www.ospc.org/about">About</a></li>
-              <li><a href="http://news.ospc.org/">News</a></li>
+              <li><a href="//www.ospc.org/taxbrain">Apps</a></li>
+              <li><a href="//www.ospc.org/about">About</a></li>
+              <li><a href="//news.ospc.org/">News</a></li>
             </ul>
           </div>
           <div class="footer-main-text">
