fix link Home->www.ospc.org

--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -70,7 +70,7 @@
           </div>
           <div class="footer-main-links">
             <ul>
-              <li><a href="/">Home</a></li>
+              <li><a href="//www.ospc.org">Home</a></li>
               <li><a href="//www.ospc.org/taxbrain">Apps</a></li>
               <li><a href="//www.ospc.org/about">About</a></li>
               <li><a href="//news.ospc.org/">News</a></li>
